--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
-    "swiper": "^11.2.6",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
